--- a/src/controller/java/com/rummikub/MainScreen.fxml
+++ b/src/controller/java/com/rummikub/MainScreen.fxml
@@ -7,14 +7,30 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rummikub.MainScreenController">
+<AnchorPane fx:id="root" prefHeight="725.0" prefWidth="1215.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rummikub.MainScreenController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="450.0" layoutX="47.0" layoutY="54.0" stroke="BLACK" strokeType="INSIDE" width="688.0" />
-      <Label fx:id="lbl_Player1" layoutX="384.0" layoutY="504.0" prefHeight="32.0" prefWidth="61.0" text="Player 1" />
-      <Label fx:id="lbl_Player2" layoutY="278.0" prefHeight="32.0" prefWidth="61.0" rotate="-90.0" text="Player 2" />
-      <Label fx:id="lbl_Player3" layoutX="365.0" layoutY="14.0" text="Player 3" />
-      <Label fx:id="lbl_Player4" layoutX="749.0" layoutY="284.0" rotate="90.0" text="Player 4" />
-      <Label layoutX="369.0" layoutY="82.0" prefHeight="32.0" prefWidth="45.0" text="Stock" />
-      <Button fx:id="endTurnButton" layoutX="578.0" layoutY="410.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="125.0" text="End Turn" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="473.0" layoutX="241.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="763.0" />
+      <Label fx:id="lbl_Player1" layoutX="608.0" layoutY="664.0" prefHeight="32.0" prefWidth="61.0" text="Player 1">
+         <graphic>
+            <FlowPane fx:id="player1_pane" prefHeight="200.0" prefWidth="200.0" />
+         </graphic>
+      </Label>
+      <Label fx:id="lbl_Player2" layoutY="278.0" prefHeight="32.0" prefWidth="61.0" rotate="-90.0" text="Player 2">
+         <graphic>
+            <FlowPane fx:id="player2_pane" prefHeight="200.0" prefWidth="200.0" />
+         </graphic></Label>
+      <Label fx:id="lbl_Player3" layoutX="365.0" layoutY="14.0" text="Player 3">
+         <graphic>
+            <FlowPane fx:id="player3_pane" prefHeight="200.0" prefWidth="200.0" />
+         </graphic></Label>
+      <Label fx:id="lbl_Player4" layoutX="976.0" layoutY="292.0" rotate="90.0" text="Player 4">
+         <graphic>
+            <FlowPane fx:id="player4_pane" prefHeight="200.0" prefWidth="200.0" />
+         </graphic></Label>
+      <Label layoutX="369.0" layoutY="82.0" prefHeight="32.0" prefWidth="45.0" text="Stock">
+         <graphic>
+            <FlowPane prefHeight="200.0" prefWidth="200.0" />
+         </graphic></Label>
+      <Button fx:id="endTurnButton" layoutX="868.0" layoutY="536.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="125.0" text="End Turn" />
    </children>
 </AnchorPane>
