--- a/src/controller/java/com/rummikub/MainScreen.fxml
+++ b/src/controller/java/com/rummikub/MainScreen.fxml
@@ -10,7 +10,8 @@
 
 <AnchorPane fx:id="root" prefHeight="725.0" prefWidth="1215.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rummikub.MainScreenController">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="473.0" layoutX="200.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="815.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="200.0" />
+     <Rectangle fx:id="rect_table" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="473.0" layoutX="241.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="763.0" />
+      <FlowPane fx:id="table_pane" layoutX="253.0" layoutY="149.0" prefHeight="372.0" prefWidth="739.0" />
       <Label fx:id="lbl_Player1" layoutX="588.0" layoutY="671.0" prefHeight="32.0" prefWidth="74.0" text="Player 1">
          <font>
             <Font size="18.0" />
