--- a/src/controller/java/com/rummikub/MainScreen.fxml
+++ b/src/controller/java/com/rummikub/MainScreen.fxml
@@ -12,18 +12,18 @@
    <children>
      <Rectangle fx:id="rect_table" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="473.0" layoutX="241.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="763.0" />
       <FlowPane fx:id="table_pane" layoutX="253.0" layoutY="149.0" prefHeight="372.0" prefWidth="739.0" />
-      <Label fx:id="lbl_Player1" layoutX="588.0" layoutY="671.0" prefHeight="32.0" prefWidth="74.0" text="Player 1">
+      <Label layoutX="588.0" layoutY="671.0" prefHeight="32.0" prefWidth="74.0" text="Player 1">
          <font>
             <Font size="18.0" />
          </font></Label>
       <FlowPane fx:id="player1_pane" layoutX="371.0" layoutY="584.0" prefHeight="200.0" prefWidth="669.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" />
-      <Label fx:id="lbl_Player2" layoutX="6.0" layoutY="351.0" prefHeight="32.0" prefWidth="61.0" rotate="-90.0" text="Player 2" />
+      <Label layoutX="6.0" layoutY="351.0" prefHeight="32.0" prefWidth="61.0" rotate="-90.0" text="Player 2" />
       <FlowPane fx:id="player2_pane" orientation="VERTICAL" prefHeight="725.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Label fx:id="lbl_Player3" layoutX="564.0" layoutY="19.0" text="Player 3" />
+      <Label layoutX="564.0" layoutY="19.0" text="Player 3" />
       <FlowPane fx:id="player3_pane" layoutX="370.0" layoutY="53.0" prefHeight="200.0" prefWidth="436.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0" />
-      <Label fx:id="lbl_Player4" layoutX="1167.0" layoutY="332.0" rotate="90.0" text="Player 4" />
+      <Label layoutX="1167.0" layoutY="332.0" rotate="90.0" text="Player 4" />
       <FlowPane fx:id="player4_pane" layoutX="1025.0" layoutY="-5.0" orientation="VERTICAL" prefHeight="873.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Button fx:id="endTurnButton" layoutX="881.0" layoutY="586.0" mnemonicParsing="false" onAction="#handleEndTurnBtn" prefHeight="77.0" prefWidth="128.0" text="End Turn" />
+      <Button layoutX="881.0" layoutY="586.0" mnemonicParsing="false" onAction="#handleEndTurnBtn" prefHeight="77.0" prefWidth="128.0" text="End Turn" />
       <Button fx:id="startGameButton" layoutX="519.0" layoutY="350.0" mnemonicParsing="false" onAction="#handleStartGameBtn" prefHeight="121.0" prefWidth="215.0" text="Start Game!" />
    </children>
 </AnchorPane>
