--- a/src/controller/java/com/rummikub/TitleScreen.fxml
+++ b/src/controller/java/com/rummikub/TitleScreen.fxml
@@ -16,7 +16,7 @@
          </font>
       </Label>
       <ComboBox fx:id="cb_PlayerCount" layoutX="199.0" layoutY="41.0" onAction="#handlePlayerCountCB" prefWidth="150.0" value="Select" AnchorPane.leftAnchor="199.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="41.0" />
-      <Button fx:id="btn_Play" disable="true" layoutX="254.0" layoutY="251.0" mnemonicParsing="false" onAction="#handlePlayBtn" text="Play!" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="254.0" AnchorPane.rightAnchor="253.0" />
+      <Button fx:id="btn_Play" disable="true" layoutX="240.0" layoutY="304.0" mnemonicParsing="false" onAction="#handlePlayBtn" prefHeight="33.0" prefWidth="68.0" text="Play!" AnchorPane.bottomAnchor="44.0" AnchorPane.leftAnchor="240.0" AnchorPane.rightAnchor="240.0" />
       <VBox fx:id="vb_PlayerStrategies" layoutX="199.0" layoutY="91.0" prefHeight="117.0" prefWidth="150.0" spacing="10.0" AnchorPane.leftAnchor="199.0" AnchorPane.rightAnchor="199.0" AnchorPane.topAnchor="91.0">
          <children>
             <ComboBox fx:id="cb_Player1" onAction="#handleStrategyCB" prefWidth="150.0" value="Select" />
@@ -32,5 +32,6 @@
             <Insets />
          </opaqueInsets>
       </VBox>
+      <CheckBox fx:id="ckBx_GameMode" layoutX="224.0" layoutY="262.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="Testing mode" textAlignment="CENTER" />
    </children>
 </AnchorPane>
