--- a/src/controller/java/com/rummikub/MainScreen.fxml
+++ b/src/controller/java/com/rummikub/MainScreen.fxml
@@ -8,50 +8,41 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" prefHeight="725.0"
-	prefWidth="1215.0" xmlns="http://javafx.com/javafx/8"
-	xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="com.rummikub.MainScreenController">
+<AnchorPane fx:id="root" prefHeight="900.0" prefWidth="1215.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rummikub.MainScreenController">
 	<children>
-		<Rectangle fx:id="rect_table" arcHeight="5.0" arcWidth="5.0"
-			fill="DODGERBLUE" height="473.0" layoutX="241.0" layoutY="136.0"
-			stroke="BLACK" strokeType="INSIDE" width="815.0"
-			AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="200.0"
-			AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="200.0" />
-		<FlowPane fx:id="table_pane" layoutX="212.0" layoutY="212.0"
-			prefHeight="372.0" prefWidth="815.0" AnchorPane.bottomAnchor="200.0"
-			AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0"
-			AnchorPane.topAnchor="200.0" />
-		<Label layoutX="588.0" layoutY="671.0" prefHeight="32.0"
-			prefWidth="74.0" text="Player 1">
+		<Rectangle fx:id="rect_table" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="500.0" layoutX="241.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="815.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="200.0" />
+		<FlowPane fx:id="table_pane" layoutX="212.0" layoutY="212.0" prefHeight="372.0" prefWidth="815.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="200.0" />
+		<Label alignment="BOTTOM_CENTER" layoutX="590.0" layoutY="671.0" prefHeight="58.0" prefWidth="115.0" text="Player 1" textAlignment="CENTER" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="550.0">
 			<font>
-				<Font size="18.0" />
+				<Font size="24.0" />
 			</font>
 		</Label>
-		<FlowPane fx:id="player1_pane" layoutX="371.0"
-			layoutY="584.0" prefHeight="200.0" prefWidth="669.0"
-			AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0"
-			AnchorPane.rightAnchor="200.0" />
-		<Label layoutX="6.0" layoutY="351.0" prefHeight="32.0"
-			prefWidth="61.0" rotate="-90.0" text="Player 2" />
-		<FlowPane fx:id="player2_pane" orientation="VERTICAL"
-			prefHeight="725.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-			AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-		<Label layoutX="564.0" layoutY="19.0" text="Player 3" />
-		<FlowPane fx:id="player3_pane" layoutX="370.0" layoutY="53.0"
-			prefHeight="200.0" prefWidth="436.0" AnchorPane.leftAnchor="200.0"
-			AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0" />
-		<Label layoutX="1167.0" layoutY="332.0" rotate="90.0"
-			text="Player 4" />
-		<FlowPane fx:id="player4_pane" layoutX="1025.0"
-			layoutY="-5.0" orientation="VERTICAL" prefHeight="873.0"
-			prefWidth="200.0" AnchorPane.bottomAnchor="0.0"
-			AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-		<Button layoutX="881.0" layoutY="586.0" mnemonicParsing="false"
-			onAction="#handleEndTurnBtn" prefHeight="77.0" prefWidth="128.0"
-			text="End Turn" />
-		<Button fx:id="startGameButton" layoutX="519.0" layoutY="350.0"
-			mnemonicParsing="false" onAction="#handleStartGameBtn"
-			prefHeight="121.0" prefWidth="215.0" text="Start Game!" />
+		<FlowPane fx:id="player1_pane" layoutX="371.0" layoutY="584.0" prefHeight="200.0" prefWidth="669.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" />
+		<Label alignment="BOTTOM_CENTER" layoutX="196.0" layoutY="393.0" prefHeight="58.0" prefWidth="115.0" rotate="-90.0" text="Player 2" AnchorPane.bottomAnchor="392.5" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="392.5">
+			<font>
+				<Font size="24.0" />
+			</font>
+		</Label>
+		<FlowPane fx:id="player2_pane" orientation="VERTICAL" prefHeight="725.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></FlowPane>
+		<Label alignment="BOTTOM_CENTER" layoutX="564.0" layoutY="19.0" prefHeight="58.0" prefWidth="115.0" text="Player 3" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="550.0" AnchorPane.topAnchor="140.0">
+			<font>
+				<Font size="24.0" />
+			</font>
+		</Label>
+		<FlowPane fx:id="player3_pane" layoutX="370.0" layoutY="53.0" prefHeight="200.0" prefWidth="436.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0" />
+		<Label alignment="BOTTOM_CENTER" layoutX="95.0" layoutY="403.0" prefHeight="58.0" prefWidth="115.0" rotate="90.0" text="Player 4" AnchorPane.bottomAnchor="392.5" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="392.5">
+			<font>
+				<Font size="24.0" />
+			</font>
+		</Label>
+		<FlowPane fx:id="player4_pane" layoutX="1025.0" layoutY="-5.0" orientation="VERTICAL" prefHeight="873.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+		<Button fx:id="startGameButton" mnemonicParsing="false" onAction="#handleNextTurn" prefHeight="121.0" prefWidth="215.0" text="Start Game!" AnchorPane.bottomAnchor="400.0" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="350.0">
+         <font>
+            <Font size="32.0" />
+         </font></Button>
+		<Button fx:id="nextTurnButton" layoutX="881.0" layoutY="586.0" mnemonicParsing="false" onAction="#handleNextTurn" prefHeight="77.0" prefWidth="128.0" text="Next Turn" AnchorPane.bottomAnchor="215.0" AnchorPane.rightAnchor="215.0" />
 	</children>
 </AnchorPane>
