--- a/src/controller/java/com/rummikub/MainScreen.fxml
+++ b/src/controller/java/com/rummikub/MainScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.shape.*?>
@@ -8,41 +9,49 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="root" prefHeight="869.0" prefWidth="1163.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rummikub.MainScreenController">
-	<children>
-		<Rectangle fx:id="rect_table" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="520.0" layoutX="241.0" layoutY="136.0" stroke="BLACK" strokeType="INSIDE" width="815.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="200.0" />
-		<FlowPane fx:id="table_pane" layoutX="212.0" layoutY="212.0" prefHeight="372.0" prefWidth="715.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="150.0" />
-		<Label fx:id="player0_label" alignment="BOTTOM_CENTER" layoutX="590.0" layoutY="671.0" prefHeight="58.0" prefWidth="115.0" text="Player 0" textAlignment="CENTER" AnchorPane.bottomAnchor="170.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="550.0">
-			<font>
-				<Font size="24.0" />
-			</font>
-		</Label>
-		<FlowPane fx:id="player0_pane" layoutX="371.0" layoutY="584.0" prefHeight="200.0" prefWidth="815.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" />
-		<Label fx:id="player1_label" alignment="BOTTOM_CENTER" layoutX="196.0" layoutY="393.0" prefHeight="58.0" prefWidth="115.0" rotate="-90.0" text="Player 1" AnchorPane.bottomAnchor="392.5" AnchorPane.leftAnchor="85.0" AnchorPane.topAnchor="392.5">
-			<font>
-				<Font size="24.0" />
-			</font>
-		</Label>
-		<FlowPane fx:id="player1_pane" orientation="VERTICAL" prefHeight="725.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets></FlowPane>
-		<Label fx:id="player2_label" alignment="BOTTOM_CENTER" layoutX="564.0" layoutY="19.0" prefHeight="58.0" prefWidth="115.0" text="Player 2" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="550.0" AnchorPane.topAnchor="140.0">
-			<font>
-				<Font size="24.0" />
-			</font>
-		</Label>
-		<FlowPane fx:id="player2_pane" layoutX="370.0" layoutY="53.0" prefHeight="200.0" prefWidth="436.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="0.0" />
-		<Label fx:id="player3_label" alignment="BOTTOM_CENTER" layoutX="95.0" layoutY="403.0" prefHeight="58.0" prefWidth="115.0" rotate="90.0" text="Player 3" AnchorPane.bottomAnchor="392.5" AnchorPane.rightAnchor="85.0" AnchorPane.topAnchor="392.5">
-			<font>
-				<Font size="24.0" />
-			</font>
-		</Label>
-		<FlowPane fx:id="player3_pane" layoutX="1025.0" layoutY="-5.0" orientation="VERTICAL" prefHeight="873.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-		<Button fx:id="startGameButton" mnemonicParsing="false" onAction="#handleNextTurn" prefHeight="121.0" prefWidth="215.0" text="Start Game!" AnchorPane.bottomAnchor="400.0" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="350.0">
+
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.rummikub.MainScreenController">
+   <children>
+      <Rectangle fx:id="player0_rectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="150.0" layoutX="175.0" layoutY="450.0" stroke="BLACK" strokeType="INSIDE" width="450.0" AnchorPane.bottomAnchor="0.0" />
+      <FlowPane fx:id="player0_pane" layoutX="175.0" layoutY="485.0" prefHeight="115.0" prefWidth="450.0" />
+      <Label fx:id="player0_label" layoutX="358.0" layoutY="450.0" text="Player 0" AnchorPane.bottomAnchor="115.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Rectangle fx:id="player1_rectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="450.0" layoutY="75.0" stroke="BLACK" strokeType="INSIDE" width="150.0" AnchorPane.leftAnchor="0.0" />
+      <FlowPane fx:id="player1_pane" layoutY="75.0" prefHeight="450.0" prefWidth="115.0" />
+      <Label fx:id="player1_label" layoutX="91.0" layoutY="283.0" rotate="90.0" text="Player 1" AnchorPane.leftAnchor="90.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Rectangle fx:id="player2_rectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="150.0" layoutX="175.0" stroke="BLACK" strokeType="INSIDE" width="450.0" AnchorPane.topAnchor="0.0" />
+      <FlowPane fx:id="player2_pane" layoutX="175.0" prefHeight="115.0" prefWidth="450.0" AnchorPane.topAnchor="0.0" />
+      <Label fx:id="player2_label" layoutX="358.0" layoutY="115.0" text="Player 2" AnchorPane.topAnchor="115.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Rectangle fx:id="player3_rectangle" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="450.0" layoutX="650.0" layoutY="75.0" stroke="BLACK" strokeType="INSIDE" width="150.0" AnchorPane.rightAnchor="0.0" />
+      <FlowPane fx:id="player3_pane" layoutX="685.0" layoutY="75.0" prefHeight="450.0" prefWidth="115.0" AnchorPane.rightAnchor="0.0" />
+      <Label fx:id="player3_label" layoutX="626.0" layoutY="283.0" rotate="-90.0" text="Player 3" AnchorPane.rightAnchor="90.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#accceb" height="273.0" layoutX="185.0" layoutY="164.0" stroke="BLACK" strokeType="INSIDE" width="431.0" />
+      <FlowPane fx:id="table_pane" layoutX="185.0" layoutY="164.0" prefHeight="273.0" prefWidth="431.0" />
+      <Button fx:id="nextTurnButton" layoutX="651.0" layoutY="535.0" mnemonicParsing="false" onAction="#handleNextTurn" prefHeight="51.0" prefWidth="132.0" text="Next Turn">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <Rectangle fx:id="startGameRectangle" arcHeight="5.0" arcWidth="5.0" fill="#808c97" height="600.0" opacity="0.86" stroke="BLACK" strokeType="INSIDE" width="800.0" />
+      <Button fx:id="startGameButton" layoutX="280.0" layoutY="246.0" mnemonicParsing="false" onAction="#handleNextTurn" prefHeight="109.0" prefWidth="240.0" text="Start Game">
          <font>
             <Font size="32.0" />
-         </font></Button>
-		<Button fx:id="nextTurnButton" layoutX="881.0" layoutY="586.0" mnemonicParsing="false" onAction="#handleNextTurn" prefHeight="77.0" prefWidth="128.0" text="Next Turn" AnchorPane.bottomAnchor="215.0" AnchorPane.rightAnchor="215.0" />
-	</children>
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
